# Vellum

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  IPAD-PARITY-PLAN.md  IPAD-PORT-PLAN.md  PLAN-WEBPAGES.md  PLAN.md  PORT-DESIGN.md  README.md  WEB-INK-PLAN.html  index.html  package-lock.json  package.json  project.yml  vite.config.ts
Benchmarks/: README.md  cases.jsonl  model_providers.py  pdfkit_extract.swift  test_vellum_bench.py  vellum_bench.py
Tests/: AiConversationStoreTests.swift  AiPipelineTests.swift  AttachmentDropTests.swift  DocumentDataStoreTests.swift  DocumentIdentityTests.swift  DocumentsRelocationTests.swift  InkPersistenceTests.swift  MarkdownParserTests.swift  PageTextCacheTests.swift  PaneTreeTests.swift  PdfPersistenceTests.swift  RecentsResolveTests.swift  ScratchpadDropRegistrationTests.swift  ScratchpadImportTests.swift  SelectableMessageTests.swift  SidebarDropRoutingTests.swift  StorageManagementTests.swift  VellumBundleTests.swift  WebLibraryStorageTests.swift  WebProxyUrlTests.swift  WebStorageLocationTests.swift  ZoomHandlerTests.swift
UITests/: README-setup.md  ScratchpadSnapshotUITests.swift
Vellum/: Vellum-iOS.entitlements
Vellum.xcodeproj/: project.pbxproj
advisor-plans/: 001-land-ai-pipeline-helpers-fix-test-target.md  002-gate-auto-page-image-by-text-threshold.md  003-stop-retrying-cancelled-requests-openai-gemini.md  004-cache-markdown-rendering-during-streaming.md  005-conversation-persistence-write-behind.md  006-repo-hygiene-benchcache-readme-stale-specs.md  007-narrow-open-external-bridge-to-youtube-ids.md  008-fragment-links-scroll-instead-of-reloading.md  009-skip-typesetting-unclosed-math-while-streaming.md  010-harden-proxy-url-roundtrip.md  011-markdown-parser-tests-and-preview-unification.md  README.md  ai-experience-cost-review.html
macos/: .gitignore  PORT-DESIGN.md  project.yml
plans/: 001-verification-baseline.md  002-surface-annotation-save-errors.md  003-api-keys-to-keychain.md  004-isolate-web-bridge-content-world.md  005-neutralize-archived-snapshot-scripts.md  005-sanitize-archived-snapshots.md  006-scratchpad-attachment-race.md  007-offload-pdf-annotation-writes.md  008-restore-window-open-interception.md  README.md  (+5 more)
specs/: GAPS.md  (+7 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: vellum-content-script.js
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  models.rs  oauth.rs  pdf_annotations.rs  pdf_session.rs  web_archive.rs  web_page.rs
(+197 files in other folders)
